# rust-ringring

./: CLAUDE.md  Cargo.toml  Makefile  README.md
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
commands/: ringring.md
docs/plans/: 2026-02-16-rust-ringring-design.md  2026-02-16-rust-ringring-implementation.md  2026-02-19-list-subcommand-design.md  2026-02-19-list-subcommand.md  2026-02-19-test-subcommand-design.md  2026-02-19-test-subcommand.md  2026-02-20-self-installer-design.md  2026-02-20-self-installer.md
src/: audio.rs  config.rs  event.rs  install.rs  main.rs  manifest.rs  notify.rs  paths.rs
