[package]
name = "rust-ringring"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ringring"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = "0.21"
notify-rust = "4"
rand = "0.9"
ureq = "2"
zip = "2"
tempfile = "3"

[profile.release]
strip = true
lto = true
opt-level = "s"
